--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     display: flex;
     text-align: center;
-    background-color: rgba(150, 223, 66, 0.582);
+    background-color: rgba(182, 233, 124, 0.582) !important
 }
 
 header {
